--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </head>
 
 <body>
-  <a href="https://github.com/lesthack/azucar"><img style="position: absolute; top: 0; right: 0; border: 0; width: 100px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <a href="https://github.com/lesthack/azucar"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
 
@@ -82,7 +82,7 @@
 
     <h1>    	
     	<a href="https://github.com/lesthack/azucar">
-    		<img src="https://raw.githubusercontent.com/lesthack/azucar/gh-pages/azucar.png" /> azucar
+    		<img width="100px" src="https://raw.githubusercontent.com/lesthack/azucar/gh-pages/azucar.png" /> azucar
     	</a>
       	<span class="small">by <a href="https://github.com/lesthack">lesthack</a></span>
     </h1>
